# fuglelyd_mc

./: .gitignore  CLAUDE.md  FuglelydAnalyser.spec  README.md  README_STREAMLIT.md  analyser_lyd_main.py  app.py  databehandling_lyd_project_info.md  joy2_tester.py  joy_division_plot.py  mac_kommandoer.md  mackommando.txt  project_plan_refactor_streamlit.md  pyproject.toml  slett.txt  test_analysis_standalone.py  utils.py
.streamlit/: config.toml
Ydata_output_lyd/interim/: enriched_detections.csv
data_input_artsliste/: arter.txt
data_output_lyd/interim/: enriched_detections.csv
data_output_lyd_traditional/interim/: enriched_detections.csv
ffmpeg_macos_bin/: ffprobe
functions/: artskart_api.py  artskart_api_info.md  birdnetlib_api.py  birdnetlib_api_art  joy2_tester.py  joy_division_plot.py  splitter_lydfilen.py  statistics.py  temporal_analysis.py
pages/: 1_Audio.py  1_🎵_Analysis.py  2_Visualization.py  2_📊_Results.py  3_🔊_Audio_Explorer.py  4_⚙️_Settings.py  5_ℹ️_About.py
streamlit_utils/: __init__.py  audio_player.py  file_browser.py  progress_tracker.py  session_state.py
tests/: __init__.py  run_tests.py  test_analysis_workflow.py  test_data_generator.py  test_new_temporal.py  test_statistics.py
