[project]
name = "fugle-lyder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "tqdm",
    "pygwalker",
    "streamlit>=1.28.0",
    "streamlit-folium>=0.15.0",
    "streamlit-aggrid>=0.3.4",
    "requests",
    "pydub",
    "tensorflow",
    "ffmpeg",
    "birdnetlib",
    "pyaudio",
    "librosa",
    "resampy>=0.4.3",
    "seaborn>=0.13.2",
    "joypy>=0.2.6",
    "scipy>=1.15.3",
    "matplotlib",
]
